--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
       "./src/types",
       "./node_modules/@types"
     ],
-    "types": ["node"],
+    "types": ["node", "jest"],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
